--- a/build.gradle
+++ b/build.gradle
@@ -4,20 +4,20 @@ apply plugin: 'application'
 buildscript {
   repositories {
     maven {
-      url "https://plugins.gradle.org/m2/"
+      url 'https://plugins.gradle.org/m2/'
     }
   }
   dependencies {
-    classpath "com.github.jengelman.gradle.plugins:shadow:2.0.0"
+    classpath 'gradle.plugin.io.vertx:vertx-gradle-plugin:0.0.6'
   }
 }
 
-apply plugin: "com.github.johnrengelman.plugin-shadow"
+apply plugin: 'io.vertx.vertx-plugin'
 
 group 'com.amdelamar'
 version = '0.1.0'
 jar.baseName = 'vertx-starter'
-mainClassName = 'io.vertx.core.Launcher'
+jar.enabled = false
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
@@ -33,4 +33,10 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
     testCompile 'io.vertx:vertx-unit:3.5.+'
+}
+
+vertx {
+  mainVerticle = 'hello.MainVerticle'
+  watch = ['src/**/*', 'build.gradle']
+  onRedeploy = ['classes']
 }
