--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ group 'com.amdelamar'
 version = '0.1.0'
 jar.baseName = 'vertx-starter'
 jar.enabled = false
-mainClassName = 'hello.VertxServer'
+mainClassName = 'hello.MainVerticle'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
