--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'io.vertx:vertx-core:3.5.+'
     compile 'io.vertx:vertx-web:3.5.+'
     compile 'io.vertx:vertx-web-templ-freemarker:3.5.+'
+    compile 'io.vertx:vertx-rx-java2:3.5.+'
    
     compile 'org.slf4j:slf4j-api:1.7.+'
     compile 'org.slf4j:slf4j-simple:1.7.+'
